using System;

namespace Interface_Segregation_Solution;

public class CheckoutInfo
{

}
