using System;

namespace Interface_Segregation_Solution;

public class Order
{
    public int Id {get; set;}
}
